# kofnote

./: .gitignore  CLAUDE.md  CODEX_FIX.md  CODEX_TASK.md  README.md  REFACTOR_PLAN.md  main.py  plan.md
.claude/: settings.local.json
docs/: ARCHITECTURE.md  BACKEND_MIGRATION.md  DEBATE_MODE_V01.md  QUICK_CAPTURE_PLAN.md  SDD_WITH_OPENSPEC.md
gateway/: README.md  package-lock.json  package.json  wrangler.toml
gateway/src/: index.js  utils.js
gateway/src/ai/: router.js
kofnote-app/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
kofnote-app/e2e/: smoke.spec.ts
kofnote-app/examples/: providers.example.json
kofnote-app/src/: App.tsx  constants.ts  index.css  types.ts
kofnote-app/src-tauri/: Cargo.toml  tauri.conf.json
kofnote-app/src-tauri/capabilities/: default.json
kofnote-app/src-tauri/src/: main.rs  tray.rs  types.rs  util.rs
kofnote-app/src-tauri/src/commands/: ai.rs  capture.rs  core.rs  debate.rs  export.rs  health.rs  keychain.rs  mod.rs  notebooklm.rs  notion.rs  prompt_service.rs  search.rs  settings.rs  supabase.rs
kofnote-app/src-tauri/src/providers/: claude.rs  cli.rs  gemini.rs  mod.rs  openai.rs
kofnote-app/src-tauri/src/storage/: index.rs  memory.rs  mod.rs  records.rs  settings_io.rs
kofnote_desktop/: __init__.py  ai.py  analytics.py  app.py  models.py  repository.py
openspec/: config.yaml
supabase/: README.md
supabase/migrations/: 001_initial_schema.sql  002_seed_data.sql  003_fixes.sql  004_og_description_param.sql
tests/: test_analytics.py  test_repository.py
(+38 files in other folders)
